image overflow problem solve

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@ body{
     margin: 0;
     font-family: 'Poppins', sans-serif;
 }
+img{
+    overflow: hidden;
+}
 /* ----------------
 banner section style
 ------------------  */
